@@ -1,3 +1,1 @@
-Add rdiff-backup style statistics.
 
-Add option to use signature file to list files in backup store.
